--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.AWSTutorial.AppBarOverlay">
+        android:theme="@style/Theme.AWSTutorial.AppBarOverlay"
+        android:visibility="invisible">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -32,16 +33,33 @@
         android:src="@drawable/ic_baseline_lock"
         app:fabCustomSize="60dp"
         app:fabSize="auto" />
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="center_horizontal|top"
         android:layout_margin="@dimen/fab_margin"
-        android:visibility="invisible"
         android:src="@drawable/ic_baseline_post_add"
+        android:visibility="invisible"
         app:fabCustomSize="60dp"
-        app:fabSize="auto"/>
+        app:fabSize="auto"
+        app:layout_anchor="@+id/fabAuth"
+        app:layout_anchorGravity="center_horizontal|top" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabItemAdd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="bottom|center_horizontal|top"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_baseline_handyman"
+        android:visibility="invisible"
+        app:fabCustomSize="60dp"
+        app:fabSize="auto"
+        app:layout_anchor="@+id/fabAdd"
+        app:layout_anchorGravity="center_horizontal|top" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
