--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -46,6 +46,13 @@
             android:inputType="textMultiLine"
             android:lines="3" />
 
+        <Spinner
+            android:id="@+id/itemType"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"/>
+
         <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
