--- a/app/src/main/res/layout/activity_add_item.xml
+++ b/app/src/main/res/layout/activity_add_item.xml
@@ -46,6 +46,13 @@
             android:inputType="textMultiLine"
             android:lines="3" />
 
+        <TextView
+            android:id="@+id/coordinatesText"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:text="GPS coordinates unknown, enable location to get them." />
+
         <Spinner
             android:id="@+id/itemType"
             android:layout_width="match_parent"
