Add activity with OSM map.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,4 +75,18 @@
         app:layout_anchor="@+id/fabAuth"
         app:layout_anchorGravity="left|center_vertical" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabOpenMap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="bottom|left"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_baseline_map"
+        android:visibility="visible"
+        app:fabCustomSize="60dp"
+        app:fabSize="auto"
+        app:layout_anchor="@+id/fabGetLocation"
+        app:layout_anchorGravity="left|center_vertical" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
